--- a/templates/barhorizontal4/index.html
+++ b/templates/barhorizontal4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Schedule C Expense by Type FY2017</title>
+        <title>Schedule C Expense by Program Source FY2017</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal4" width=auto max-height="400"></canvas>
+<canvas id="barhorizontal5" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -66,40 +66,163 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("barhorizontal4");
+var ctx = document.getElementById("barhorizontal5");
 
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-                    "Youth Services",
-                    "Social Services & Children's Services",
-                    "Health",
-                    "Aging",
-                    "Education",
-                    "Cultural Affairs",
-                    "Fire and Criminal Justice Services",
-                    "Higher Education",
-                    "Economic Development",
-                    "Housing and Buildings",
-                    "Parks and Recreation",
-                    "Governmental Operations",
-                    "Transportation",
-                    "Consumer Affairs",
-                    "Public Safety",
-                    "Elected Officials",
-                    "Libraries",
-                    "Sanitation and Solid Waste",
-                    "Finance",
+                  "Local",
+                  "City Council Merit-Based Scholarships",
+                  "Support for Educators",
+                  "Cultural After-School Adventure (CASA)",
+                  "Crisis Management System",
+                  "Year-Round Employment Program (Work, Learn, Grow)",
+                  "Parks Maintenance",
+                  "Discretionary Child Care",
+                  "Job Training and Placement Initiative",
+                  "COMPASS",
+                  "NYC Cleanup",
+                  "Youth",
+                  "Domestic Violence and Empowerment (DoVE) Initiative",
+                  "New York Immigrant Family Unity Project",
+                  "Adult Literacy Initiative",
+                  "Anti-Eviction and Housing Court Resources",
+                  "Alternatives to Incarceration (ATI's)",
+                  "Aging",
+                  "Ending the Epidemic",
+                  "Afterschool Enrichment Initiative",
+                  "Speaker's Initiative",
+                  "Cultural Immigrant Initiative",
+                  "Legal Services for Low-Income New Yorkers",
+                  "Food Pantries",
+                  "Naturally Occurring Retirement Communities (NORCs)",
+                  "Community Housing Preservation Strategies",
+                  "Senior Centers, Programs, and Enhancements",
+                  "Urban Advantage",
+                  "Autism Awareness",
+                  "Child Care Vouchers",
+                  "Educational Programs for Students",
+                  "Anti-Poverty",
+                  "City's First Readers",
+                  "Immigrant Opportunities Initiative",
+                  "Parks Equity Initiative",
+                  "Holocaust Survivors",
+                  "Communities of Color Nonprofit Stabilization Fund",
+                  "Legal Services for the Working Poor",
+                  "Worker Cooperative Business Development Initiative",
+                  "CUNY Research Institutes",
+                  "Developmental, Psychological and Behavioral Health Services",
+                  "YouthBuild Project Initiative",
+                  "Digital Inclusion and Literacy Initiative",
+                  "Support Our Seniors",
+                  "SU-CASA",
+                  "A Greener NYC",
+                  "Nurse Family Partnership",
+                  "CUNY Citizenship NOW! Program",
+                  "Boro",
+                  "Stabilizing NYC",
+                  "Coalition Theaters of Color",
+                  "Supportive Alternatives to Violent Encounters (SAVE)",
+                  "Physical Education and Fitness",
+                  "Court-Involved Youth Mental Health Initiative",
+                  "Geriatric Mental Health",
+                  "Healthy Aging Initiative",
+                  "Dropout Prevention and Intervention Initiative",
+                  "HIV/AIDS Faith Based Initiative",
+                  "HPD Home Loan Program",
+                  "Immigrant Health Initiative",
+                  "LGBT Senior Services in Every Borough",
+                  "Senior Centers for Immigrant Populations",
+                  "Viral Hepatitis Prevention",
+                  "Bail Fund",
+                  "Create New Technology Incubators",
+                  "Initiative to Combat Sexual Assault",
+                  "Restorative Justice Program",
+                  "Small Business Outreach and Assistance Program",
+                  "Neighborhood Development Grant Initiative",
+                  "Community Schools",
+                  "Big Brothers and Big Sisters of New York City",
+                  "Sports Training and Rolemodels for Success (STARS) Initiative",
+                  "Maternal and Child Health Services",
+                  "Access to Critical Services for Seniors",
+                  "Bridge to Tomorrow",
+                  "Borough Presidents' Discretionary Funding Restoration",
+                  "Mental Health Services for Vulnerbale Populations",
+                  "Access Health",
+                  "Children Under Five",
+                  "Mortgage Foreclosure Prevention Program",
+                  "Foreclosure Buyback Initiative",
+                  "LGBTQ Youth Mental Health",
+                  "Children and Families in NYC Homeless System",
+                  "Social Adult Day Care Enhancement",
+                  "Access to Food and Nutritional Education",
+                  "Young Women's Leadership Development",
+                  "Citywide Homeless Prevention Fund",
+                  "Cancer Services",
+                  "Prisoners' Rights Project",
+                  "HPD Alternative Enforcement Program (AEP)",
+                  "Made in NYC",
+                  "Support for Victims of Human Trafficking",
+                  "Food Access and Benefits",
+                  "Anti-Gun Violence - Art a Catalyst for Change",
+                  "New York Immigrant Population",
+                  "DFTA Core Enhancement Services",
+                  "Child Health and Wellness",
+                  "MWBE Leadership Associations",
+                  "Work-Based Learning Internships",
+                  "Social Justice Postgraduate Fellowship Program",
+                  "Day Laborer Workforce Initiative",
+                  "Youth Health Initiative",
+                  "Civic Education in New York City Schools",
+                  "Center for Court Innovation",
+                  "Medicaid Redesign Transition",
+                  "Unaccompanied Minors and Families",
+                  "Child Mind Institute",
+                  "Gender Equity Liaisons",
+                  "Foster Youth Transitional Care",
+                  "Legal Information for Families (LIFT)",
+                  "Financial Empowerment for NYC's Renters",
+                  "Information and Referral Services",
+                  "Creative Arts Team",
+                  "Contraceptive Fund",
+                  "Student Voter Registration Day",
+                  "Beating Hearts",
+                  "Veterans Community Development",
+                  "Legal Services for Veterans",
+                  "Elder Abuse Enhancement",
+                  "Homeless Prevention Services for Veterans",
+                  "Joseph S. Murphy Institute Center for Worker Education",
+                  "Housing Information Project",
+                  "Reproductive and Sexual Health Services",
+                  "Ghetto Film School Accelerator Program Model",
+                  "Prevent Sexual Assault (PSA) Initiative for Young Adults",
+                  "Post-Arrest Diversion Program for Young Adults",
+                  "Initiative for Immigrant Survivors of Domestic Violence",
+                  "Transgender Specific Healthcare Training",
+                  "Power Action Change Empowerment (PACE) Initiative for Young Adults",
+                  "Step In and Stop It Initiative to Address Bystander Intervention",
+                  "Anti-Gun Violence - Youth Programs",
+                  "Jill Chaifetz Helpline",
+                  "Mental Health Services for Veterans",
+                  "Warrant Reduction Events",
+                  "LGBT Inclusive Curriculum",
+                  "City Clerk PS Enhancement",
+                  "Job Placement for Veterans",
+                  "Green Jobs Corps Program",
+                  "Brooklyn Borough President PS Enhancment",
+                  "hackNY",
+                  "CUNY Technical Apprenticeship Program",
+
                 ],
         datasets: [{
             label: 'Schedule C Types of Programs Funded in FY 2017 Expense Budget',
-            backgroundColor:["#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952"],
+            backgroundColor:["#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [90410810,40485291,39135792,30846805,29925400,26859684,23301755,22737556,17769019,14854159,13450928,870500,624500,255000,242000,175000,116000,106301,3500]
+            data: [36538500,15375000,12744500,11220000,11175534,11000000,9553205,9355069,8106000,8000000,7800000,7650000,6305000,6230000,6000000,5650000,5632000,5610000,5595000,5425000,5380000,5010000,5000000,4000000,3850000,3651000,3578000,3500000,3315386,3000000,2975000,2800000,2792000,2600000,2540000,2500000,2500000,2405000,2248000,2140000,2139390,2100000,2040000,2040000,2020000,2002000,2000000,2000000,2000000,2000000,1965000,1950000,1925000,1900000,1827000,1810000,1585000,1560000,1500000,1500000,1500000,1500000,1423658,1400000,1400000,1348000,1300000,1288855,1275000,1225000,1200000,1200000,1192818,1180000,1150000,1129774,1093000,1070000,1002000,1000000,1000000,1000000,1000000,950000,930000,825000,820000,790500,750000,750000,750000,750000,725000,720000,700000,660000,646000,600000,600000,600000,570000,500000,500000,500000,500000,500000,500000,500000,500000,485000,450000,407811,400000,400000,400000,350000,350000,350000,335000,300000,300000,300000,260000,260000,250000,250000,250000,250000,250000,250000,250000,245000,190000,175000,165000,150000,150000,120000,100000,100000,50000]
         }]
     },
     options: {
