--- a/templates/tree/index.html
+++ b/templates/tree/index.html
@@ -2702,6 +2702,7 @@
     .type("tree_map")
     .id(["group","name"])
     .size("value")
+    .font({ "family": "Open Sans" })
     .draw()
 
 </script>
