--- a/templates/bar4/index.html
+++ b/templates/bar4/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar3" width="400" height="500"></canvas>
+<canvas id="bar3" width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -70,7 +70,7 @@ var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
         labels: ["Youth Services",
-                  "Social Services & Children's Services",
+                  "Social Services & Child Services",
                   "Health",
                   "Aging",
                   "Education",
