--- a/templates/doughnut6/index.html
+++ b/templates/doughnut6/index.html
@@ -51,7 +51,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
-            backgroundColor:["#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb","#82c91e","#be4bdb",],
+            backgroundColor:["#82c91e","#88cb29","#8fce35","#95d141","#9cd44d","#a2d759","#a9da65","#b0dc70","#b6df7c","#bde288","#c3e594","#cae8a0","#d0ebac","#d7edb7","#def0c3","#e4f3cf","#ebf6db","#f1f9e7","#f8fcf3","#ffffff"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
