--- a/templates/bar5/index.html
+++ b/templates/bar5/index.html
@@ -87,7 +87,7 @@ var myChart = new Chart(ctx, {
         ],
         datasets: [{
             label: 'Schedule C Types of Programs Funded in FY 2017 Capital Budget',
-            backgroundColor:["#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952"],
+            backgroundColor:["#82c91e","#88cb29","#8fce35","#95d141","#9cd44d","#a2d759","#a9da65","#b0dc70","#b6df7c","#bde288","#c3e594","#cae8a0","#d0ebac","#d7edb7","#def0c3","#e4f3cf","#ebf6db","#f1f9e7","#f8fcf3","#ffffff"],
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
