--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -64,7 +64,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
-            backgroundColor:["#228ae6","#f59f00","#9AC9F3","#f59f00","#228ae6","#9AC9F3","#f59f00","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6"],
+            backgroundColor:["#228AE6","#F59F00","#228AE6","#F8Bf55","#31292e7","#3896E8","#FBDFAA","#409AE9","#489eea","#4fa2eb","#57a6ec","#5eaaec","#66aeed","#6eb2ee","#75b6ef","#7dbaf0","#85bef1","#8cc2f2","#94c6f2","#9bcaf3","#a3cef4","#abd2f5","#b2d6f6","#badaf7","#c2def8","#c9e2f8","#D1e6f9","#d8eafa","#e0eefb","#e8f2fc","#eff6fd","#f7fafe"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
