--- a/templates/doughnut7/index.html
+++ b/templates/doughnut7/index.html
@@ -40,7 +40,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
-            backgroundColor:["#e6e6e6","#12b886","#e6e6e6","#12b886","#e6e6e6","#e6e6e6","#12b886"],
+            backgroundColor:["#BE4BDB","#C661DF","#CE78E4","#D68EE8","#DEA5ED","#E6BBF1","#EED2F6","#F6E8FA"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
