--- a/templates/linechartmulti9/index.html
+++ b/templates/linechartmulti9/index.html
@@ -40,132 +40,132 @@ var config =  {
                     {
                     label: "Real Property Tax",
                     fill: false,
-                    backgroundColor: "#e6e6e6",
-                    borderColor: "#e6e6e6",
+                    backgroundColor: "#BE4BDB",
+                    borderColor: "#BE4BDB",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#e6e6e6",
-                    pointHoverBorderColor: "#e6e6e6",
+                    pointHoverBackgroundColor: "#BE4BDB",
+                    pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
                     data: [8761000000,10063000000,11582000000,11616000000,12636000000,13123000000,13204000000,14487000000,16369000000,17086000000,18158000000,18970000000,20202000000,21518000000,23120000000,24229000000]
                     },
                     {
                     label: "Personal Income Tax",
                     fill: false,
-                    backgroundColor: "#12b886",
-                    borderColor: "#12b886",
+                    backgroundColor: "#BE4BDB",
+                    borderColor: "#BE4BDB",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#12b886",
-                    pointHoverBorderColor: "#12b886",
+                    pointHoverBackgroundColor: "#BE4BDB",
+                    pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
                     data: [4990000000,5000000000,6093000000,7135000000,8007000000,8618000000,9861000000,7627000000,7576000000,8138000000,8531000000,9778000000,10152000000,11264000000,11410000000,11577000000]
                     },
                     {
                     label: "Business Taxes",
                     fill: false,
-                    backgroundColor: "#e6e6e6",
-                    borderColor: "#e6e6e6",
+                    backgroundColor: "#BE4BDB",
+                    borderColor: "#BE4BDB",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#e6e6e6",
-                    pointHoverBorderColor: "#e6e6e6",
+                    pointHoverBackgroundColor: "#BE4BDB",
+                    pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
                     data: [2440000000,2282000000,2863000000,3711000000,4343000000,6013000000,5412000000,5204000000,4505000000,5299000000,5362000000,5857000000,5875000000,6049000000,5961000000,6009000000]
                     },
                     {
                     label: "Sales Tax",
                     fill: false,
-                    backgroundColor: "#12b886",
-                    borderColor: "#12b886",
+                    backgroundColor: "#BE4BDB",
+                    borderColor: "#BE4BDB",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#12b886",
-                    pointHoverBorderColor: "#12b886",
+                    pointHoverBackgroundColor: "#BE4BDB",
+                    pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
                     data: [3360000000,3535000000,4018000000,4355000000,4418000000,4619000000,4868000000,4594000000,5059000000,5586000000,5812000000,6132000000,6494000000,6742000000,6948000000,7116000000]
                     },
                     {
                     label: "Other Taxes",
                     fill: false,
-                    backgroundColor: "#e6e6e6",
-                    borderColor: "#e6e6e6",
+                    backgroundColor: "#BE4BDB",
+                    borderColor: "#BE4BDB",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#e6e6e6",
-                    pointHoverBorderColor: "#e6e6e6",
+                    pointHoverBackgroundColor: "#BE4BDB",
+                    pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
                     data: [2618000000,3017000000,3718000000,4546000000,5157000000,6154000000,5420000000,4099000000,3692000000,4241000000,4248000000,4985000000,5652000000,6368000000,6350000000,5712000000]
                     },
                     {
                     label: "Miscellaneous Revenues",
                     fill: false,
-                    backgroundColor: "#12b886",
-                    borderColor: "#12b886",
+                    backgroundColor: "#D68EE8",
+                    borderColor: "#D68EE8",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#12b886",
-                    pointHoverBorderColor: "#12b886",
+                    pointHoverBackgroundColor: "#D68EE8",
+                    pointHoverBorderColor: "#D68EE8",
                     pointHoverBorderWidth: 2,
                     data: [3739000000,4648000000,3370000000,5074000000,3862000000,4243000000,5044000000,4627000000,4690000000,4388000000,5247000000,4657000000,5622000000,6216000000,5218000000,4643000000]
                     },
                     {
                     label: "Unrestricted Intergovernmental Aid",
                     fill: false,
-                    backgroundColor: "#e6e6e6",
-                    borderColor: "#e6e6e6",
+                    backgroundColor: "#E6BBF1",
+                    borderColor: "#E6BBF1",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#e6e6e6",
-                    pointHoverBorderColor: "#e6e6e6",
+                    pointHoverBackgroundColor: "#E6BBF1",
+                    pointHoverBorderColor: "#E6BBF1",
                     pointHoverBorderWidth: 2,
                     data: [666000000,1443000000,963000000,603000000,494000000,35000000,242000000,327000000,-18000000,39000000,25000000,0,1000000,1000000,6000000,0]
                     },
                     {
                     label: "Disallowance of Categorical Grants",
                     fill: false,
-                    backgroundColor: "#12b886",
-                    borderColor: "#12b886",
+                    backgroundColor: "#F6E8FA",
+                    borderColor: "#F6E8FA",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#12b886",
-                    pointHoverBorderColor: "#12b886",
+                    pointHoverBackgroundColor: "#F6E8FA",
+                    pointHoverBorderColor: "#F6E8FA",
                     pointHoverBorderWidth: 2,
                     data: [0,-47000000,-27000000,-87000000,-542000000,-103000000,-114000000,0,0,-112000000,166000000,-59000000,-18000000,-110000000,-15000000,-15000000]
                     },
                     {
                     label: "Federal Categorical Grants",
                     fill: false,
-                    backgroundColor: "#e6e6e6",
-                    borderColor: "#e6e6e6",
+                    backgroundColor: "#CE78E4",
+                    borderColor: "#CE78E4",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#e6e6e6",
-                    pointHoverBorderColor: "#e6e6e6",
+                    pointHoverBackgroundColor: "#CE78E4",
+                    pointHoverBorderColor: "#CE78E4",
                     pointHoverBorderWidth: 2,
                     data: [6097000000,5618000000,5415000000,6654000000,5243000000,5471000000,5692000000,5941000000,7716000000,7877000000,7178000000,8620000000,6962000000,6982000000,8538000000,7673000000]
                     },
                     {
                     label: "State Categorical Grants",
                     fill: false,
-                    backgroundColor: "#12b886",
-                    borderColor: "#12b886",
+                    backgroundColor: "#C661DF",
+                    borderColor: "#C661DF",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#12b886",
-                    pointHoverBorderColor: "#12b886",
+                    pointHoverBackgroundColor: "#C661DF",
+                    pointHoverBorderColor: "#C661DF",
                     pointHoverBorderWidth: 2,
                     data: [8030000000,8317000000,8454000000,8823000000,9586000000,10185000000,11421000000,12124000000,11645000000,11255000000,11114000000,11027000000,10916000000,12097000000,13507000000,13673000000]
                     },
                     {
                     label: "Other Categorical Grants",
                     fill: false,
-                    backgroundColor: "#e6e6e6",
-                    borderColor: "#e6e6e6",
+                    backgroundColor: "#E6BBF1",
+                    borderColor: "#E6BBF1",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#e6e6e6",
-                    pointHoverBorderColor: "#e6e6e6",
+                    pointHoverBackgroundColor: "#E6BBF1",
+                    pointHoverBorderColor: "#E6BBF1",
                     pointHoverBorderWidth: 2,
                     data: [615000000,1006000000,957000000,862000000,1150000000,1038000000,1089000000,1279000000,1579000000,1523000000,1141000000,1063000000,1023000000,909000000,747000000,853000000]
                     },
                     {
                     label: "Capital IFA",
                     fill: false,
-                    backgroundColor: "#12b886",
-                    borderColor: "#12b886",
+                    backgroundColor: "#EED2F6",
+                    borderColor: "#EED2F6",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#12b886",
-                    pointHoverBorderColor: "#12b886",
+                    pointHoverBackgroundColor: "#EED2F6",
+                    pointHoverBorderColor: "#EED2F6",
                     pointHoverBorderWidth: 2,
                     data: [305000000,300000000,328000000,346000000,365000000,421000000,455000000,475000000,583000000,561000000,551000000,538000000,535000000,551000000,574000000,646000000]
                     }
