fixed color prob

--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -92,11 +92,11 @@
           {
             label: "Public Safety",
             fill: false,
-            backgroundColor: "#31292e7",
-            borderColor: "#31292e7",
+            backgroundColor: "#3896E8",
+            borderColor: "#3896E8",
             borderWidth: 1,
-            pointHoverBackgroundColor: "#31292e7",
-            pointHoverBorderColor: "#31292e7",
+            pointHoverBackgroundColor: "#3896E8",
+            pointHoverBorderColor: "#3896E8",
             pointHoverBorderWidth: 1,
             data: [3988583000,3853833000,3846155000,4173395000,4072989000,4149954000,4458382000,4784816000,4995971000,5130602000,5196110000,5227566000,5246831000,5514901000,5913651000,5539623000]
           },
