--- a/templates/bar4/index.html
+++ b/templates/bar4/index.html
@@ -91,7 +91,7 @@ var myChart = new Chart(ctx, {
         ],
         datasets: [{
             label: 'Schedule C Types of Programs Funded in FY 2017 Expense Budget',
-            backgroundColor:["#228AE6","#228AE6","#31292e7","#3896e8","#409AE9","#489eea","#4fa2eb","#57a6ec","#5eaaec","#66aeed","#6eb2ee","#75b6ef","#7dbaf0","#85bef1","#8cc2f2","#94c6f2","#9bcaf3","#a3cef4","#abd2f5","#b2d6f6","#badaf7","#c2def8","#c9e2f8","#D1e6f9","#d8eafa","#e0eefb","#e8f2fc","#eff6fd","#f7fafe"],
+            backgroundColor:["#228AE6","#228AE6","#3896e8","#3896e8","#409AE9","#489eea","#4fa2eb","#57a6ec","#5eaaec","#66aeed","#6eb2ee","#75b6ef","#7dbaf0","#85bef1","#8cc2f2","#94c6f2","#9bcaf3","#a3cef4","#abd2f5","#b2d6f6","#badaf7","#c2def8","#c9e2f8","#D1e6f9","#d8eafa","#e0eefb","#e8f2fc","#eff6fd","#f7fafe"],
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
