--- a/templates/linechartmulti8/index.html
+++ b/templates/linechartmulti8/index.html
@@ -35,7 +35,7 @@ var config =  {
     type: 'line',
     fill: false,
     data: {
-        labels: ["FY 2002 Actual ","FY 2003 Actual ","FY 2004 Actual ","FY 2005 Actual ","FY 2006 Actual ","FY 2007 Actual ","FY 2008 Actual ","FY 2009 Actual ","FY 2010 Actual ","FY 2011 Actual ","FY 2012 Actual ","FY 2013 Actual ","FY 2014 Actual ","FY 2015 Actual","FY 2016 Plan ","FY 2017 Plan"],
+        labels: ["FY 2002 Actual ","FY 2003 Actual ","FY 2004 Actual ","FY 2005 Actual ","FY 2006 Actual ","FY 2007 Actual ","FY 2008 Actual ","FY 2009 Actual ","FY 2010 Actual ","FY 2011 Actual ","FY 2012 Actual ","FY 2013 Actual ","FY 2014 Actual ","FY 2015 Actual"],
         datasets: [
                     {
                       label: "Transportation",
@@ -46,7 +46,7 @@ var config =  {
                       pointHoverBackgroundColor: "#82c91e",
                       pointHoverBorderColor: "#82c91e",
                       pointHoverBorderWidth: 2,
-                      data: [595000000,1287000000,991000000,839000000,671000000,799000000,1291000000,1068000000,1813000000,770000000,528000000,1043000000,872000000,1485000000,1816000000,3488000000]
+                      data: [595000000,1287000000,991000000,839000000,671000000,799000000,1291000000,1068000000,1813000000,770000000,528000000,1043000000,872000000,1485000000]
                     },
                     {
                       label: "Water and Sewers",
@@ -57,7 +57,7 @@ var config =  {
                       pointHoverBackgroundColor: "#88cb29",
                       pointHoverBorderColor: "#88cb29",
                       pointHoverBorderWidth: 2,
-                      data: [1871000000,1380000000,1713000000,2338000000,1741000000,3690000000,3051000000,2175000000,2650000000,1252000000,1685000000,1521000000,1160000000,2103000000,2353000000,3234000000]
+                      data: [1871000000,1380000000,1713000000,2338000000,1741000000,3690000000,3051000000,2175000000,2650000000,1252000000,1685000000,1521000000,1160000000,2103000000]
                     },
                     {
                       label: "Education",
@@ -68,7 +68,7 @@ var config =  {
                       pointHoverBackgroundColor: "#8fce35",
                       pointHoverBorderColor: "#8fce35",
                       pointHoverBorderWidth: 2,
-                      data: [1340000000,963000000,593000000,2188000000,1990000000,3216000000,3205000000,2656000000,2265000000,1787000000,2481000000,2345000000,2060000000,2884000000,3150000000,3121000000]
+                      data: [1340000000,963000000,593000000,2188000000,1990000000,3216000000,3205000000,2656000000,2265000000,1787000000,2481000000,2345000000,2060000000,2884000000]
                     },
                     {
                       label: "Parks and Recreation",
@@ -79,7 +79,7 @@ var config =  {
                       pointHoverBackgroundColor: "#95d141",
                       pointHoverBorderColor: "#95d141",
                       pointHoverBorderWidth: 2,
-                      data: [169000000,226000000,143000000,225000000,279000000,476000000,545000000,551000000,542000000,396000000,290000000,533000000,365000000,646000000,820000000,1442000000]
+                      data: [169000000,226000000,143000000,225000000,279000000,476000000,545000000,551000000,542000000,396000000,290000000,533000000,365000000,646000000]
                     },
                     {
                       label: "Economic Development",
@@ -90,7 +90,7 @@ var config =  {
                       pointHoverBackgroundColor: "#9cd44d",
                       pointHoverBorderColor: "#9cd44d",
                       pointHoverBorderWidth: 2,
-                      data: [193000000,255000000,221000000,215000000,168000000,175000000,398000000,373000000,461000000,190000000,244000000,282000000,278000000,163000000,657000000,1061000000]
+                      data: [193000000,255000000,221000000,215000000,168000000,175000000,398000000,373000000,461000000,190000000,244000000,282000000,278000000,163000000]
                     },
                     {
                       label: "Resiliency",
@@ -101,7 +101,7 @@ var config =  {
                       pointHoverBackgroundColor: "#a2d759",
                       pointHoverBorderColor: "#a2d759",
                       pointHoverBorderWidth: 2,
-                      data: [191000000,143000000,140000000,187000000,297000000,475000000,640000000,425000000,290000000,220000000,145000000,171000000,328000000,164000000,564000000,1020000000]
+                      data: [191000000,143000000,140000000,187000000,297000000,475000000,640000000,425000000,290000000,220000000,145000000,171000000,328000000,164000000]
                     },
                     {
                       label: "Housing and Buildings",
@@ -112,7 +112,7 @@ var config =  {
                       pointHoverBackgroundColor: "#a9da65",
                       pointHoverBorderColor: "#a9da65",
                       pointHoverBorderWidth: 2,
-                      data: [469000000,340000000,296000000,455000000,391000000,341000000,559000000,421000000,376000000,363000000,323000000,421000000,460000000,470000000,1569000000,925000000]
+                      data: [469000000,340000000,296000000,455000000,391000000,341000000,559000000,421000000,376000000,363000000,323000000,421000000,460000000,470000000]
                     },
                     {
                       label: "Health",
@@ -123,7 +123,7 @@ var config =  {
                       pointHoverBackgroundColor: "#b0dc70",
                       pointHoverBorderColor: "#b0dc70",
                       pointHoverBorderWidth: 2,
-                      data: [121000000,104000000,90000000,450000000,307000000,229000000,232000000,280000000,175000000,286000000,299000000,315000000,306000000,157000000,514000000,778000000]
+                      data: [121000000,104000000,90000000,450000000,307000000,229000000,232000000,280000000,175000000,286000000,299000000,315000000,306000000,157000000]
                     },
                     {
                       label: "Fire and Criminal Justice Services",
@@ -134,7 +134,7 @@ var config =  {
                       pointHoverBackgroundColor: "#b6df7c",
                       pointHoverBorderColor: "#b6df7c",
                       pointHoverBorderWidth: 2,
-                      data: [181000000,209000000,99000000,143000000,213000000,163000000,159000000,111000000,204000000,163000000,182000000,261000000,188000000,225000000,673000000,609000000]
+                      data: [181000000,209000000,99000000,143000000,213000000,163000000,159000000,111000000,204000000,163000000,182000000,261000000,188000000,225000000]
                     },
                     {
                       label: "Public Safety",
@@ -145,7 +145,7 @@ var config =  {
                       pointHoverBackgroundColor: "#bde288",
                       pointHoverBorderColor: "#bde288",
                       pointHoverBorderWidth: 2,
-                      data: [119000000,81000000,65000000,43000000,76000000,87000000,101000000,146000000,805000000,80000000,63000000,89000000,170000000,141000000,451000000,530000000]
+                      data: [119000000,81000000,65000000,43000000,76000000,87000000,101000000,146000000,805000000,80000000,63000000,89000000,170000000,141000000]
                     },
                     {
                       label: "Sanitation",
@@ -156,7 +156,7 @@ var config =  {
                       pointHoverBackgroundColor: "#c3e594",
                       pointHoverBorderColor: "#c3e594",
                       pointHoverBorderWidth: 2,
-                      data: [216000000,159000000,140000000,137000000,77000000,189000000,173000000,171000000,503000000,320000000,222000000,400000000,277000000,274000000,253000000,397000000]
+                      data: [216000000,159000000,140000000,137000000,77000000,189000000,173000000,171000000,503000000,320000000,222000000,400000000,277000000,274000000]
                     },
                     {
                       label: "Public Buildings",
@@ -167,7 +167,7 @@ var config =  {
                       pointHoverBackgroundColor: "#cae8a0",
                       pointHoverBorderColor: "#cae8a0",
                       pointHoverBorderWidth: 2,
-                      data: [167000000,102000000,176000000,78000000,110000000,95000000,165000000,141000000,91000000,116000000,154000000,190000000,144000000,94000000,180000000,345000000]
+                      data: [167000000,102000000,176000000,78000000,110000000,95000000,165000000,141000000,91000000,116000000,154000000,190000000,144000000,94000000]
                     },
                     {
                       label: "Libraries",
@@ -178,7 +178,7 @@ var config =  {
                       pointHoverBackgroundColor: "#d0ebac",
                       pointHoverBorderColor: "#d0ebac",
                       pointHoverBorderWidth: 2,
-                      data: [45000000,76000000,70000000,41000000,35000000,39000000,53000000,104000000,74000000,21000000,55000000,27000000,42000000,40000000,407000000,243000000]
+                      data: [45000000,76000000,70000000,41000000,35000000,39000000,53000000,104000000,74000000,21000000,55000000,27000000,42000000,40000000]
                     },
                     {
                       label: "Cultural Affairs",
@@ -189,7 +189,7 @@ var config =  {
                       pointHoverBackgroundColor: "#d7edb7",
                       pointHoverBorderColor: "#d7edb7",
                       pointHoverBorderWidth: 2,
-                      data: [208000000,207000000,101000000,140000000,151000000,102000000,212000000,430000000,338000000,161000000,135000000,176000000,215000000,154000000,644000000,215000000]
+                      data: [208000000,207000000,101000000,140000000,151000000,102000000,212000000,430000000,338000000,161000000,135000000,176000000,215000000,154000000]
                     },
                     {
                       label: "Technology",
@@ -200,7 +200,7 @@ var config =  {
                       pointHoverBackgroundColor: "#d7edb7",
                       pointHoverBorderColor: "#d7edb7",
                       pointHoverBorderWidth: 2,
-                      data: [34000000,71000000,40000000,110000000,112000000,231000000,224000000,240000000,743000000,255000000,131000000,107000000,245000000,94000000,288000000,198000000]
+                      data: [34000000,71000000,40000000,110000000,112000000,231000000,224000000,240000000,743000000,255000000,131000000,107000000,245000000,94000000]
                     },
                     {
                       label: "Courts and Legal Services",
@@ -211,7 +211,7 @@ var config =  {
                       pointHoverBackgroundColor: "#def0c3",
                       pointHoverBorderColor: "#def0c3",
                       pointHoverBorderWidth: 2,
-                      data: [192000000,96000000,105000000,132000000,142000000,159000000,540000000,11000000,77000000,97000000,63000000,17000000,123000000,10000000,168000000,187000000]
+                      data: [192000000,96000000,105000000,132000000,142000000,159000000,540000000,11000000,77000000,97000000,63000000,17000000,123000000,10000000]
                     },
                     {
                       label: "Higher Education",
@@ -222,7 +222,7 @@ var config =  {
                       pointHoverBackgroundColor: "#def0c3",
                       pointHoverBorderColor: "#def0c3",
                       pointHoverBorderWidth: 2,
-                      data: [10000000,21000000,19000000,20000000,40000000,22000000,132000000,210000000,31000000,58000000,70000000,48000000,74000000,55000000,236000000,102000000]
+                      data: [10000000,21000000,19000000,20000000,40000000,22000000,132000000,210000000,31000000,58000000,70000000,48000000,74000000,55000000]
                     },
                     {
                       label: "Social Services & Children's Services",
@@ -233,7 +233,7 @@ var config =  {
                       pointHoverBackgroundColor: "#e4f3cf",
                       pointHoverBorderColor: "#e4f3cf",
                       pointHoverBorderWidth: 2,
-                      data: [29000000,13000000,10000000,4000000,1000000,23000000,6000000,8000000,6000000,8000000,13000000,11000000,10000000,6000000,33000000,102000000]
+                      data: [29000000,13000000,10000000,4000000,1000000,23000000,6000000,8000000,6000000,8000000,13000000,11000000,10000000,6000000]
                     },
                     {
                       label: "Human Resources Administration",
@@ -244,7 +244,7 @@ var config =  {
                       pointHoverBackgroundColor: "#ebf6db",
                       pointHoverBorderColor: "#ebf6db",
                       pointHoverBorderWidth: 2,
-                      data: [41000000,53000000,17000000,12000000,5000000,28000000,18000000,12000000,11000000,24000000,23000000,14000000,65000000,89000000,75000000,58000000]
+                      data: [41000000,53000000,17000000,12000000,5000000,28000000,18000000,12000000,11000000,24000000,23000000,14000000,65000000,89000000]
                     },
                     {
                       label: "Property",
@@ -255,7 +255,7 @@ var config =  {
                       pointHoverBackgroundColor: "#f1f9e7",
                       pointHoverBorderColor: "#f1f9e7",
                       pointHoverBorderWidth: 2,
-                      data: [14000000,11000000,3000000,1000000,4000000,-1000000,-2000000,0,2000000,1000000,0,0,0,4000000,8000000,32000000]
+                      data: [14000000,11000000,3000000,1000000,4000000,-1000000,-2000000,0,2000000,1000000,0,0,0,4000000]
                     },
                     {
                       label: "Aging",
@@ -266,7 +266,7 @@ var config =  {
                       pointHoverBackgroundColor: "#f8fcf3",
                       pointHoverBorderColor: "#f8fcf3",
                       pointHoverBorderWidth: 2,
-                      data: [8000000,5000000,2000000,5000000,3000000,5000000,4000000,-1000000,4000000,1000000,4000000,4000000,6000000,2000000,11000000,11000000]
+                      data: [8000000,5000000,2000000,5000000,3000000,5000000,4000000,-1000000,4000000,1000000,4000000,4000000,6000000,2000000]
                     }
 
           ]
