--- a/templates/doughnut7/index.html
+++ b/templates/doughnut7/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Revenue Budget FY2017</title>
+        <title>Adopted Revenue Budget FY2017</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -29,23 +29,39 @@ var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
         labels: [
-          "Taxes",
-          "State Grants",
-          "Federal Grants",
-          "Misc",
-          "Less: Intra-City Revenue",
+          "Property Tax",
+          "State Grants (Social Services, Education, City Universtiy, Health)",
+          "Income Tax",
+          "Federal Grants (Community Dev, Social Services, Education)",
+          "Sales Tax",
+          "Corp Tax",
+          "Unincorporated Business Tax",
+          "Real Property Transfer Tax",
+          "Water and Sewer Charges",
+          "Other Tax",
+          "Mortgage Recording Tax",
+          "Charges for Services",
+          "Fines and Forfeitures",
           "Other Categorical Grants",
+          "Commercial Occupancy Tax",
+          "Tax Audit Revenues Tax",
+          "Licenses, Franchises, etc",
           "Transfers from Capital Budget",
-          "Disallowances Against Categorical Grants"
+          "Hotel Tax",
+          "Miscellaneous",
+          "Utility Tax",
+          "Rental Income",
+          "Interest Income",
+          "Cigarette Tax",
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
-            backgroundColor:["#BE4BDB","#C661DF","#CE78E4","#D68EE8","#DEA5ED","#E6BBF1","#EED2F6","#F6E8FA"],
+            backgroundColor:["#BE4BDB","#BE4BDB","#BE4BDB","#C661DF","#C661DF","#C661DF","#CE78E4","#CE78E4","#CE78E4","#D68EE8","#D68EE8","#D68EE8","#DEA5ED","#DEA5ED","#DEA5ED","#E6BBF1","#E6BBF1","#E6BBF1","#EED2F6","#EED2F6","#EED2F6","#F6E8FA"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [66.544,16.650,9.344,7.802,2.148,1.040,0.786,0.018]
+            data: [29.252,16.647,13.667,9.342,8.664,4.808,2.508,1.897,1.737,1.390,1.321,1.184,1.102,1.039,0.980,0.869,0.799,0.786,0.659,0.493,0.464,0.264,0.075,0.052]
             }]
     },
     options: {
