--- a/templates/linechartmulti9/index.html
+++ b/templates/linechartmulti9/index.html
@@ -35,7 +35,7 @@ var config =  {
     type: 'line',
     fill: false,
     data: {
-        labels: ["FY 2002 Actual ","FY 2003 Actual ","FY 2004 Actual ","FY 2005 Actual ","FY 2006 Actual ","FY 2007 Actual ","FY 2008 Actual ","FY 2009 Actual ","FY 2010 Actual ","FY 2011 Actual ","FY 2012 Actual ","FY 2013 Actual ","FY 2014 Actual ","FY 2015 Actual","FY 2016 Plan ","FY 2017 Plan"],
+        labels: ["FY 2002 Actual ","FY 2003 Actual ","FY 2004 Actual ","FY 2005 Actual ","FY 2006 Actual ","FY 2007 Actual ","FY 2008 Actual ","FY 2009 Actual ","FY 2010 Actual ","FY 2011 Actual ","FY 2012 Actual ","FY 2013 Actual ","FY 2014 Actual ","FY 2015 Actual"],
         datasets: [
                     {
                     label: "Real Property Tax",
@@ -46,7 +46,7 @@ var config =  {
                     pointHoverBackgroundColor: "#BE4BDB",
                     pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
-                    data: [8761000000,10063000000,11582000000,11616000000,12636000000,13123000000,13204000000,14487000000,16369000000,17086000000,18158000000,18970000000,20202000000,21518000000,23120000000,24229000000]
+                    data: [8761000000,10063000000,11582000000,11616000000,12636000000,13123000000,13204000000,14487000000,16369000000,17086000000,18158000000,18970000000,20202000000,21518000000]
                     },
                     {
                     label: "Personal Income Tax",
@@ -57,7 +57,7 @@ var config =  {
                     pointHoverBackgroundColor: "#BE4BDB",
                     pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
-                    data: [4990000000,5000000000,6093000000,7135000000,8007000000,8618000000,9861000000,7627000000,7576000000,8138000000,8531000000,9778000000,10152000000,11264000000,11410000000,11577000000]
+                    data: [4990000000,5000000000,6093000000,7135000000,8007000000,8618000000,9861000000,7627000000,7576000000,8138000000,8531000000,9778000000,10152000000,11264000000]
                     },
                     {
                     label: "Business Taxes",
@@ -68,7 +68,7 @@ var config =  {
                     pointHoverBackgroundColor: "#BE4BDB",
                     pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
-                    data: [2440000000,2282000000,2863000000,3711000000,4343000000,6013000000,5412000000,5204000000,4505000000,5299000000,5362000000,5857000000,5875000000,6049000000,5961000000,6009000000]
+                    data: [2440000000,2282000000,2863000000,3711000000,4343000000,6013000000,5412000000,5204000000,4505000000,5299000000,5362000000,5857000000,5875000000,6049000000]
                     },
                     {
                     label: "Sales Tax",
@@ -79,7 +79,7 @@ var config =  {
                     pointHoverBackgroundColor: "#BE4BDB",
                     pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
-                    data: [3360000000,3535000000,4018000000,4355000000,4418000000,4619000000,4868000000,4594000000,5059000000,5586000000,5812000000,6132000000,6494000000,6742000000,6948000000,7116000000]
+                    data: [3360000000,3535000000,4018000000,4355000000,4418000000,4619000000,4868000000,4594000000,5059000000,5586000000,5812000000,6132000000,6494000000,6742000000]
                     },
                     {
                     label: "Other Taxes",
@@ -90,7 +90,7 @@ var config =  {
                     pointHoverBackgroundColor: "#BE4BDB",
                     pointHoverBorderColor: "#BE4BDB",
                     pointHoverBorderWidth: 2,
-                    data: [2618000000,3017000000,3718000000,4546000000,5157000000,6154000000,5420000000,4099000000,3692000000,4241000000,4248000000,4985000000,5652000000,6368000000,6350000000,5712000000]
+                    data: [2618000000,3017000000,3718000000,4546000000,5157000000,6154000000,5420000000,4099000000,3692000000,4241000000,4248000000,4985000000,5652000000,6368000000]
                     },
                     {
                     label: "Miscellaneous Revenues",
@@ -101,7 +101,7 @@ var config =  {
                     pointHoverBackgroundColor: "#D68EE8",
                     pointHoverBorderColor: "#D68EE8",
                     pointHoverBorderWidth: 2,
-                    data: [3739000000,4648000000,3370000000,5074000000,3862000000,4243000000,5044000000,4627000000,4690000000,4388000000,5247000000,4657000000,5622000000,6216000000,5218000000,4643000000]
+                    data: [3739000000,4648000000,3370000000,5074000000,3862000000,4243000000,5044000000,4627000000,4690000000,4388000000,5247000000,4657000000,5622000000,6216000000]
                     },
                     {
                     label: "Unrestricted Intergovernmental Aid",
@@ -112,7 +112,7 @@ var config =  {
                     pointHoverBackgroundColor: "#E6BBF1",
                     pointHoverBorderColor: "#E6BBF1",
                     pointHoverBorderWidth: 2,
-                    data: [666000000,1443000000,963000000,603000000,494000000,35000000,242000000,327000000,-18000000,39000000,25000000,0,1000000,1000000,6000000,0]
+                    data: [666000000,1443000000,963000000,603000000,494000000,35000000,242000000,327000000,-18000000,39000000,25000000,0,1000000,1000000]
                     },
                     {
                     label: "Disallowance of Categorical Grants",
@@ -123,7 +123,7 @@ var config =  {
                     pointHoverBackgroundColor: "#F6E8FA",
                     pointHoverBorderColor: "#F6E8FA",
                     pointHoverBorderWidth: 2,
-                    data: [0,-47000000,-27000000,-87000000,-542000000,-103000000,-114000000,0,0,-112000000,166000000,-59000000,-18000000,-110000000,-15000000,-15000000]
+                    data: [0,-47000000,-27000000,-87000000,-542000000,-103000000,-114000000,0,0,-112000000,166000000,-59000000,-18000000,-110000000]
                     },
                     {
                     label: "Federal Categorical Grants",
@@ -134,7 +134,7 @@ var config =  {
                     pointHoverBackgroundColor: "#CE78E4",
                     pointHoverBorderColor: "#CE78E4",
                     pointHoverBorderWidth: 2,
-                    data: [6097000000,5618000000,5415000000,6654000000,5243000000,5471000000,5692000000,5941000000,7716000000,7877000000,7178000000,8620000000,6962000000,6982000000,8538000000,7673000000]
+                    data: [6097000000,5618000000,5415000000,6654000000,5243000000,5471000000,5692000000,5941000000,7716000000,7877000000,7178000000,8620000000,6962000000,6982000000]
                     },
                     {
                     label: "State Categorical Grants",
@@ -145,7 +145,7 @@ var config =  {
                     pointHoverBackgroundColor: "#C661DF",
                     pointHoverBorderColor: "#C661DF",
                     pointHoverBorderWidth: 2,
-                    data: [8030000000,8317000000,8454000000,8823000000,9586000000,10185000000,11421000000,12124000000,11645000000,11255000000,11114000000,11027000000,10916000000,12097000000,13507000000,13673000000]
+                    data: [8030000000,8317000000,8454000000,8823000000,9586000000,10185000000,11421000000,12124000000,11645000000,11255000000,11114000000,11027000000,10916000000,12097000000]
                     },
                     {
                     label: "Other Categorical Grants",
@@ -156,7 +156,7 @@ var config =  {
                     pointHoverBackgroundColor: "#E6BBF1",
                     pointHoverBorderColor: "#E6BBF1",
                     pointHoverBorderWidth: 2,
-                    data: [615000000,1006000000,957000000,862000000,1150000000,1038000000,1089000000,1279000000,1579000000,1523000000,1141000000,1063000000,1023000000,909000000,747000000,853000000]
+                    data: [615000000,1006000000,957000000,862000000,1150000000,1038000000,1089000000,1279000000,1579000000,1523000000,1141000000,1063000000,1023000000,909000000]
                     },
                     {
                     label: "Capital IFA",
@@ -167,7 +167,7 @@ var config =  {
                     pointHoverBackgroundColor: "#EED2F6",
                     pointHoverBorderColor: "#EED2F6",
                     pointHoverBorderWidth: 2,
-                    data: [305000000,300000000,328000000,346000000,365000000,421000000,455000000,475000000,583000000,561000000,551000000,538000000,535000000,551000000,574000000,646000000]
+                    data: [305000000,300000000,328000000,346000000,365000000,421000000,455000000,475000000,583000000,561000000,551000000,538000000,535000000,551000000]
                     }
           ]
         },
