--- a/templates/doughnut7/index.html
+++ b/templates/doughnut7/index.html
@@ -32,7 +32,7 @@ var myChart = new Chart(ctx, {
           "Property Tax",
           "State Grants (Social Services, Education, City Universtiy, Health)",
           "Income Tax",
-          "Federal Grants (Community Dev, Social Services, Education)",
+          "Federal Grants",
           "Sales Tax",
           "Corp Tax",
           "Unincorporated Business Tax",
