--- a/templates/doughnut7/index.html
+++ b/templates/doughnut7/index.html
@@ -30,7 +30,7 @@ var myChart = new Chart(ctx, {
     data: {
         labels: [
           "Property Tax",
-          "State Grants (Social Services, Education, City Universtiy, Health)",
+          "State Grants",
           "Income Tax",
           "Federal Grants",
           "Sales Tax",
