--- a/templates/doughnut7/index.html
+++ b/templates/doughnut7/index.html
@@ -56,7 +56,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
-            backgroundColor:["#BE4BDB","#BE4BDB","#BE4BDB","#C661DF","#C661DF","#C661DF","#CE78E4","#CE78E4","#CE78E4","#D68EE8","#D68EE8","#D68EE8","#DEA5ED","#DEA5ED","#DEA5ED","#E6BBF1","#E6BBF1","#E6BBF1","#EED2F6","#EED2F6","#EED2F6","#F6E8FA"],
+            backgroundColor:["#BE4BDB","#FFE952","#BE4BDB","#FFF293","#BE4BDB","#C661DF","#C661DF","#C661DF","#CE78E4","#CE78E4","#CE78E4","#D68EE8","#D68EE8","#D68EE8","#DEA5ED","#DEA5ED","#DEA5ED","#E6BBF1","#E6BBF1","#E6BBF1","#EED2F6","#EED2F6","#EED2F6","#F6E8FA"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
