--- a/templates/linechartmulti9/index.html
+++ b/templates/linechartmulti9/index.html
@@ -128,22 +128,22 @@ var config =  {
                     {
                     label: "Federal Categorical Grants",
                     fill: false,
-                    backgroundColor: "#CE78E4",
-                    borderColor: "#CE78E4",
+                    backgroundColor: "#FFF293",
+                    borderColor: "#FFF293",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#CE78E4",
-                    pointHoverBorderColor: "#CE78E4",
+                    pointHoverBackgroundColor: "#FFF293",
+                    pointHoverBorderColor: "#FFF293",
                     pointHoverBorderWidth: 2,
                     data: [6097000000,5618000000,5415000000,6654000000,5243000000,5471000000,5692000000,5941000000,7716000000,7877000000,7178000000,8620000000,6962000000,6982000000]
                     },
                     {
                     label: "State Categorical Grants",
                     fill: false,
-                    backgroundColor: "#C661DF",
-                    borderColor: "#C661DF",
+                    backgroundColor: "#FFE952",
+                    borderColor: "#FFE952",
                     borderWidth: 1,
-                    pointHoverBackgroundColor: "#C661DF",
-                    pointHoverBorderColor: "#C661DF",
+                    pointHoverBackgroundColor: "#FFE952",
+                    pointHoverBorderColor: "#FFE952",
                     pointHoverBorderWidth: 2,
                     data: [8030000000,8317000000,8454000000,8823000000,9586000000,10185000000,11421000000,12124000000,11645000000,11255000000,11114000000,11027000000,10916000000,12097000000]
                     },
