--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Adopted Budget FY 2016 - Top Ten Agencies for Spending</title>
+        <title>Adopted Budget FY 2016 - Expense</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -30,16 +30,16 @@ var myChart = new Chart(ctx, {
     data: {
         labels: [
                   "Education",
-                  "Misc",
-                  "Social Services & Children's Services",
+                  "General Welfare",
+                  "Miscellaneous",
                   "Pension Contributions",
                   "Public Safety",
                   "Fire and Criminal Justice Services",
                   "Debt Service",
-                  "Housing and Buildings",
                   "Health",
                   "Sanitation and Solid Waste",
                   "Governmental Operations",
+                  "Housing and Buildings",
                   "Water and Sewers",
                   "Higher Education",
                   "Transportation",
@@ -61,6 +61,7 @@ var myChart = new Chart(ctx, {
                   "Veterans",
                   "Civil Service and Labor",
                   "Standards and Ethics"
+
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
@@ -69,7 +70,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [28.328,13.629,12.665,9.909,7.062,4.463,3.806,3.495,2.382,2.149,2.148,1.849,1.345,1.296,0.927,0.799,0.646,0.610,0.517,0.465,0.422,0.301,0.296,0.232,0.067,0.060,0.052,0.050,0.016,0.005,0.004,0.003]
+            data: [27.11,16.86,13.04,11.47,6.65,4.19,3.64,2.18,2.02,2.00,1.75,1.63,1.26,1.15,0.88,0.75,0.59,0.58,0.47,0.43,0.40,0.28,0.27,0.17,0.06,0.06,0.05,0.05,0.02,0.00,0.00,0.00]
         }]
     }
         ,
