--- a/templates/barhorizontal6/index.html
+++ b/templates/barhorizontal6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Per Capita Federal Grants to Cities FY16</title>
+        <title>Lexington Gardens Affordable Housing</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal1" width=auto max-height="400"></canvas>
+<canvas id="barhorizontal6" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -66,28 +66,25 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("barhorizontal1");
+var ctx = document.getElementById("barhorizontal6");
 
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-                  "New York City",
-                  "San Francisco",
-                  "Chicago",
-                  "Los Angeles",
-                  "Minneapolis",
-                  "Seattle",
-                  "Philadelphia",
+          "Income Less Than $25,890",
+          "Income Less Than $43,150",
+          "Income Less Than $69,040",
+          "Income Less Than $112,190",
                 ],
         datasets: [{
-            label: 'Per Capita Federal Grants to Cities FY16',
-            backgroundColor:["#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952"],
+            label: 'Lexington Gardens Affordable Housing',
+            backgroundColor:["#BE4BDB","#228AE6","#82C91E","#F59F00"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [843.45,535.43,386.83,106.67,74.24,66.82,18.67]
+            data: [80, 120, 120, 80]
         }]
     },
     options: {
@@ -97,7 +94,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero: true,
             callback: function(value) {
-              return '$' + value.toLocaleString('en-US');
+              return value.toLocaleString('en-US');
             }
           }
         }],
